--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -1328,39 +1328,79 @@
 // i'm available panel
 // ==========================================================================
 
-#availablecontainer {
+#available-container {
     display: flex;
     align-items: center;
     min-height: 100vh;
 }
 
-#availablecontainer .page-title, #availableheadline {
+#available-container .page-title, #available-headline {
     // margin-bottom: rvr(2);
 
     @include make-col-ready;
     @include make-col(12);
+    padding-left: 0;
+    padding-right: 0;
 }
 
-#availablecontent {
+#available-content {
     @include make-col-ready;
     @include make-col(12);
+     padding-left: 0;
+    padding-right: 0;
 }
 
-#availablecontent .card {
+#available-content .card {
     @include make-col-ready;
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(xs) {
         @include make-col(12);
-    }
+         padding-left: 0;
+    padding-right: 0;
 
 
     @include media-breakpoint-up(md) {
         @include make-col(4);
     }
+            @include media-breakpoint-up(lg) {
+                @include make-col(3);
+            }
+    }
+
 
 
     border: none;
 }
 
+#available-card-1, #available-card-2{
+margin-bottom: $rvr-2;
+@include media-breakpoint-up(md) {
+        margin-bottom: 0;
+        }
+}
+
+.available .copy{
+    max-width: $ms-10_75;
+    @include media-breakpoint-up(md) {
+            max-width: unset;
+            }
+}
+
+.available h5{
+    font-weight: 400;
+    letter-spacing: .15rem;
+}
+
+#available-container > div > div.subhead{
+    margin-bottom: $rvr-2;
+@include media-breakpoint-up(md) {
+        margin-bottom: 0;
+}
+}
+
+
+#claims{
+    font-style: italic;
+}
 // 
 // cats panel
 // ==========================================================================
@@ -2175,9 +2215,13 @@ a.btn.btn-do {
 .about-icons {
     display: flex;
     flex-wrap: wrap;
+        justify-content: center;
     @include make-col-ready;
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(xs) {
         @include make-col(12);
+        padding-left: 0;
+        padding-right: 0;
+
     }
 
 
@@ -2201,9 +2245,12 @@ flex-direction: column;
         @include media-breakpoint-up(xs) {
             @include make-col(4);
             padding-left: 0;
-    padding-right: 0;
+    padding-right: 30px;
+    margin-top: $rvr-1;
         }
                 @include media-breakpoint-up(md) {
+                   padding-right: 0;
+                   margin-top: 0;
                    margin-bottom: $rvr-2;
                 }
 }
@@ -2222,6 +2269,8 @@ flex-direction: column;
         max-width: 75%;
         }
     }
+
+
 
 // #about-content-row {
 //     display: flex;
@@ -2747,6 +2796,9 @@ body {
     #splash-container {
         max-width: 1000px;
     }
+}
+#available-container{
+    max-width: 1100px;
 }
 
 .grid-container {
